--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --color-accent: #ff4500;
   --color-dark:#0d1117;
   --color-dark-foreground:#151b23;
-  --color-leight: #F4F4F4 ;
+  --color-leight: #E5E5E5 ;
   --color-leight-foreground: #ffffff;
   --color-custom-green : #238636;
   --color-custom-green-hover : #29903b;
